# sphinx-needs-data-explorer

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  README_pypi.md  createStandaloneHelpPage.py  pyproject.toml  requirements.txt  setup.py  uid_entrypoint
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  main.yml  main2.yml
doc/: requirements.txt
doc/docs/: .buildinfo  genindex.html  index.html  needs.json  search.html
doc/docs/_static/: sphinx_needs_data_explorer.html
doc/docs/_static/peg/: peg-0.10.0.min.js
doc/source/: conf.py  demo.rst  dummy.rst  index.rst
doc/source/_static/css/: custom.css
doc/source/_static/puml/: sphinx_needs_data_explorer.puml
doc/source/_templates/: article-header-buttons.html
doc/source/images/: sphinx_needs_data_explorer.cmapx
docs/: .buildinfo  demo.html  genindex.html  index.html  needs.json  objects.inv  search.html  searchindex.js
docs/_sources/: demo.rst  index.rst
docs/_static/: documentation_options.js  my_custom_role.css  sphinx_needs_data_explorer.css  sphinx_needs_data_explorer.html  sphinx_needs_data_explorer.js
docs/_static/js/: explorer_button.js
docs/_static/puml/: sphinx_needs_data_explorer.puml
sphinx_needs_data_explorer/: __init__.py
sphinx_needs_data_explorer/_static/: sphinx_needs_data_explorer.css  sphinx_needs_data_explorer.html  sphinx_needs_data_explorer.js
sphinx_needs_data_explorer/_static/_static/js/: explorer_button.js
sphinx_needs_data_explorer/_static/_templates/: explorer-button.html
