[project]
license = {file = "LICENSE"}

[tool.poetry]
name = "sphinx_needs_data_explorer"
version = "0.9.0"
description = "Sphinx-needs-data-explorer is a Sphinx extension to visualize Sphinx-Needs data"
authors = ["Michael Parkes <mparkes@post.cz>"]
readme = "README.md"
license = "MIT"
#homepage = "https://python-poetry.org/"
repository = "https://github.com/mi-parkes/sphinx_needs_data_explorer"
documentation = "https://mi-parkes.github.io/sphinx_needs_data_explorer/"
exclude = [
    "build/*",
    "dist/*",
    "doc/*",
    "myvenv/*"
]

[tool.poetry.dependencies]
python              = "^3.12"
Sphinx              = ">=6.1.3"

[tool.poetry.group.dev.dependencies]
taskipy             = ">=1.11.0"
black               = ">=24.1.0"

[tool.poetry.group.doc.dependencies]
sphinx-book-theme       = "1.0.1"
myst_parser             = ">=2.0.0"
GitPython               = ">=3.1.10"
sphinxcontrib-plantuml  = "0.24"
sphinx-needs            = "2.0.0"
sphinx-copybutton       = "0.5.2"
#sphinx-needs-data-explorer= {path = "./", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
help      = { cmd = "task --list", help="Show this help" }
doc       = { cmd = "cd doc && sphinx-build -M html source build", help = "Generate the package documentation using Sphinx." }
black     = { cmd = "poetry run -vvv black .", help = "Apply the Black code formatter to the package's source tree." }
clean     = { cmd = "rm -rf build dist doc/build", help = "Remove all intermediate and output files." }
clean-doc = { cmd = "rm -rf doc/build" , help = "Remove all intermediate and output documentation files."}
set-readme-refs = { cmd = "sed -i 's/6d9afc22473bdcf64cf12f92188f1c4203ce3ae5/6d9afc22473bdcf64cf12f92188f1c4203ce3ae5/g' README.md" }

[tool.black]
line-length = 88
target-version = ['py38']
include = 'sphinx_needs_data_explorer\/.*\.pyi?$'
extend-exclude = '''
/(
  # Exclude Example
  tests
  | build/
  | dist/
  | myvenv/
  | profiling/
  | scripts/generate_schema.py
)
'''
